--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -13,7 +13,7 @@
             animation: "fade",   //options:"slide" or "fade"
             controlNav:true,
             directionNav:true,
-            easing:"swing",
+            easing:false,
             animationSpeed:400,
             pauseOnAction: true,
             pauseOnHover: true,
@@ -102,7 +102,7 @@
         display: inline-block;
     }
 
-    .flex-direction-nav a:before  {
+    .flex-direction-nav a  {
         font-family: "flexslider-icon";
         font-size: 40px;
         line-height: 40px;
