--- a/app/views/contents/show_complex_content.html.haml
+++ b/app/views/contents/show_complex_content.html.haml
@@ -11,7 +11,7 @@
     .row-fluid
       .span12
         //- cache("content/#{@content.complex_name}/{@content.updated_at}/en/#", expires_in: 1.minute ) do
-        #{eval(@content.send(@complex_name)).html_safe}
+        = render @complex_name
 
 
 :javascript
