--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -152,56 +152,7 @@
 
 <div class='row-fluid' id='home_first_row' >
   <div class='span6'>
-
-    <!--  Adds homepage items to media viewer -->
-    <div class="flexslider">
-      <ul class="slides">
-        <% iframe_id = 1 %>
-        <% @home_media.each do |home_media_item| %>
-            <li>
-              <div class="frame">
-                <% if !home_media_item.url.blank? %>
-                    <%= raw(home_media_item.youtube_embed(home_media_item.url,320,570,iframe_id)) %>
-                <% else %>
-                    <%= image_tag(home_media_item.home_media.url) %>
-                <% end %>
-                <div class="flex-caption youtube-caption" id=<%= iframe_id %>>
-                  <p>
-                      <div class="banner-text">
-                         <h2><%= home_media_item.banner_title %></h2>
-                         <h4><%= raw(home_media_item.banner_text) %></h4>
-                      </div>
-                  </p>
-                </div>
-                <% iframe_id = iframe_id +1 %>
-              </div>
-            </li>
-        <% end %>
-
-        <!-- Adds random media items from projects to media viewer -->
-        <% if !@project_media.nil? %>
-            <% @project_media.each do |media_item| %>
-                <li>
-                  <div class="frame">
-                    <% if !media_item.url.blank? %>
-                        <%= raw(media_item.youtube_embed(media_item.url,320,570,iframe_id)) %>
-                    <% else %>
-                        <%= image_tag media_item.media.url %>
-                    <% end %>
-                    <div class="flex-caption youtube-caption" id=<%= iframe_id %> >
-                      <p>
-                          <div class=banner-text>
-                            <h2>Learn more about <%= link_to media_item.homepage_text, project_path(media_item.project_id),{:style=>'color:#3BB9FF;'} %></h2>
-                          </div>
-                      </p>
-                    </div>
-                    <% iframe_id = iframe_id +1 %>
-                  </div>
-                </li>
-            <% end %>
-        <% end %>
-      </ul>
-    </div>
+    <%= render "home_media_viewer" %>
   </div>
   <div id='stats-box' class='span6 container-fluid'>
 
