--- a/app/views/contents/_meet_the_team.html.erb
+++ b/app/views/contents/_meet_the_team.html.erb
@@ -1,29 +1,31 @@
-<% Content.find_all_by_content_type("Faculty/Staff").sort do |a,b| %>
-    <% (a.data["position"] && b.data["position"]) ? a.data["position"] <=> b.data["position"] : ( a.data["position"] ? -1 : 1 ).each_slice(2) do |slice| %>
-        <div class='row-fluid' style='margin:10px;'>"
-          <% slice.map do |f| %>
-              <div class='span2' >
-                <%= image_tag "people/#{f.name.downcase.gsub(/\s/, "_")}.png", class: 'team-image' %>
+<table>
+  <div class='row-fluid' style='margin:10px;'>
+    <% Person.joins(:position).where(positions: {name: "Faculty/Staff"}).each do |person| %>
 
-               </div>
+        <div class='span2' >
+                <%= image_tag(person.avatar.url(:medium), class: 'staff-image') %>
+
+              </div>
               <div class='span4'>
                 <h4>
-                  <%= f.name %>
+                  <%= person.first_name %> <%= person.last_name %>
                   <small>
-                    <a href='mailto:china@aiddata.org?subject=Message for #{f.name}'>
+                    <a href='mailto:china@aiddata.org?subject=Message for #{person.name}'>
                       E-mail
                     </a>
                   </small>
                 </h4>
                 <p class='teaser'>
-                  <%= f.data["description_html"] %>
+                  <%= raw(person.bio) %>
                 </p>
               </div>
-              <%= f.join %>
-          <% end %>
-        </div>
     <% end %>
-<% end %>
+
+
+  </div>
+</table>
+
+
 
 
 
