--- a/app/views/static_pages/_home_media_viewer.html.erb
+++ b/app/views/static_pages/_home_media_viewer.html.erb
@@ -91,17 +91,40 @@
     }
 
     .carousel.carousel-fade .item {
+        -webkit-transition: opacity 0.5s ease-in-out;
+        -moz-transition: opacity 0.5s ease-in-out;
+        -ms-transition: opacity 0.5s ease-in-out;
+        -o-transition: opacity 0.5s ease-in-out;
+        transition: opacity 0.5s ease-in-out;
         opacity:0;
     }
 
     .carousel.carousel-fade .active.item {
         opacity:1;
     }
+
+    .carousel.carousel-fade .active.left,
+    .carousel.carousel-fade .active.right {
+        left: 0;
+        z-index: 2;
+        opacity: 0;
+        filter: alpha(opacity=0);
+    }
+
+    .carousel.carousel-fade .next,
+    .carousel.carousel-fade .prev {
+        left: 0;
+        z-index: 1;
+    }
+
+    .carousel.carousel-fade .carousel-control {
+        z-index: 3;
+    }
 </style>
 
 
 
-<div id='home_carousel' class='carousel carousel-fade xwith_shadow'>
+<div id='home_carousel' class='carousel slide carousel-fade'>
   <ol class='carousel-indicators'>
     <li data-target='#home_carousel' data-slide-to='0' class='active'></li>
     <li data-target='#home_carousel' data-slide-to='1'></li>
