--- a/app/views/static_pages/_home_media_viewer.html.erb
+++ b/app/views/static_pages/_home_media_viewer.html.erb
@@ -65,6 +65,27 @@
 
 
 <style>
+
+    .carousel {
+        width: 100%;
+        height: 320px;
+        border: 0 !important;
+        margin-bottom: 2em !important;
+    }
+    .carousel .item {
+        text-align: center;
+        width: 100%;
+        overflow:hidden;
+
+    }
+    .carousel .item  img {
+        width:auto;
+        height: 320px;
+        max-width: 100%;
+        max-height: 100%;
+        display: inline-block;
+    }
+
     .banner-text {
         display: inline-table;
         text-align: inherit;
@@ -124,7 +145,7 @@
 
 
 
-<div id='home_carousel' class='carousel slide carousel-fade'>
+<div id='home_carousel' class='carousel slide'>
   <ol class='carousel-indicators'>
     <li data-target='#home_carousel' data-slide-to='0' class='active'></li>
     <li data-target='#home_carousel' data-slide-to='1'></li>
