--- a/app/views/static_pages/_home_media_viewer.html.erb
+++ b/app/views/static_pages/_home_media_viewer.html.erb
@@ -65,12 +65,17 @@
 
 
 <style>
+    .carousel-indicators {
+        bottom:-50px;
+    }
+    .carousel-inner {
+        margin-bottom:50px;
+    }
 
     .carousel {
         width: 100%;
         height: 320px;
         border: 0 !important;
-        margin-bottom: 2em !important;
     }
     .carousel .item {
         text-align: center;
@@ -83,6 +88,31 @@
         height: 320px;
         max-width: 100%;
         max-height: 100%;
+        display: inline-block;
+    }
+
+    .carousel-caption {
+        position:absolute;
+        left:50;right:50;bottom:0;
+        height:60px;
+        z-index:1;
+        width:100%;
+        color: #FFFFFF;
+        vertical-align: middle;
+        padding-bottom: 10px;
+        text-align: center;
+    }
+
+    .carousel-indicators.middle {
+        left: 0;
+        right: 0;
+        top: auto;
+        bottom: 30px;
+        text-align: right;
+
+    }
+    .carousel-indicators.middle li {
+        float: none;
         display: inline-block;
     }
 
@@ -145,14 +175,7 @@
 
 
 
-<div id='home_carousel' class='carousel slide'>
-  <ol class='carousel-indicators'>
-    <li data-target='#home_carousel' data-slide-to='0' class='active'></li>
-    <li data-target='#home_carousel' data-slide-to='1'></li>
-    <li data-target='#home_carousel' data-slide-to='2'></li>
-    <li data-target='#home_carousel' data-slide-to='3'></li>
-    <li data-target='#home_carousel' data-slide-to='4'></li>
-  </ol>
+<div id='home_carousel' class='carousel slide'> <!-- add 'carousel-fade' to class for fade -->
 
   <div class='carousel-inner'>
 
@@ -208,4 +231,12 @@
   </div>
   <a class='carousel-control left' href='#home_carousel' data-slide='prev'>&lsaquo;</a>
   <a class='carousel-control right' href='#home_carousel' data-slide='next'>&rsaquo;</a>
+
+  <ol class='carousel-indicators middle'>
+    <li data-target='#home_carousel' data-slide-to='0' class='active'></li>
+    <li data-target='#home_carousel' data-slide-to='1'></li>
+    <li data-target='#home_carousel' data-slide-to='2'></li>
+    <li data-target='#home_carousel' data-slide-to='3'></li>
+    <li data-target='#home_carousel' data-slide-to='4'></li>
+  </ol>
 </div>
