--- a/app/views/static_pages/_home_media_viewer.html.erb
+++ b/app/views/static_pages/_home_media_viewer.html.erb
@@ -46,11 +46,10 @@
         slide_5 = new YT.Player('slide_5', {
             events: {
                 'onStateChange': on_youtube_play
-
             }
         });
-
     }
+
     // Handle caption toggle.
     function on_youtube_play(event) {
         if (event.data == YT.PlayerState.PLAYING ) {
@@ -62,9 +61,7 @@
             $('#home_carousel').carousel('cycle')
         }
     }
-
 </script>
-
 
 <style>
     .carousel {
@@ -72,12 +69,14 @@
         height: 320px;
         border: 0 !important;
     }
+
     .carousel .item {
         text-align: center;
         width: 100%;
         overflow:hidden;
 
     }
+
     .carousel .item  img {
         width:auto;
         height: 320px;
@@ -95,6 +94,7 @@
         color: #FFFFFF;
         vertical-align: middle;
         padding-bottom: 10px;
+        margin-left: -15px;
         text-align: center;
     }
 
@@ -115,7 +115,8 @@
         display: inline-table;
         text-align: inherit;
         padding-left: 10px;
-        padding-right: 10px
+        padding-right: 10px;
+        height: inherit
     }
 
     .banner-text h2 {
@@ -136,10 +137,7 @@
     }
 </style>
 
-
-
 <div id='home_carousel' class='carousel slide'>
-
   <div class='carousel-inner'>
 
     <!--  Adds homepage items to media viewer -->
@@ -154,7 +152,7 @@
           <div class="carousel-caption youtube-caption" id=<%= iframe_id %>>
             <p>
             <div class="banner-text">
-              <h2><%= home_media_item.banner_title %></h2>
+              <h2><%= raw(home_media_item.banner_title) %></h2>
               <h4><%= raw(home_media_item.banner_text) %></h4>
             </div>
             </p>
@@ -162,7 +160,6 @@
           <% iframe_id = iframe_id +1 %>
         </div>
     <% end %>
-
 
     <!-- Adds random media items from projects to media viewer -->
     <% if !@project_media.nil? %>
@@ -183,12 +180,10 @@
               </div>
               <% iframe_id = iframe_id +1 %>
             </div>
-
         <% end %>
     <% end %>
-
-
   </div>
+
   <a class='carousel-control left' href='#home_carousel' data-slide='prev'>&lsaquo;</a>
   <a class='carousel-control right' href='#home_carousel' data-slide='next'>&rsaquo;</a>
 
