--- a/app/views/static_pages/_home_media_viewer.html.erb
+++ b/app/views/static_pages/_home_media_viewer.html.erb
@@ -74,7 +74,6 @@
         text-align: center;
         width: 100%;
         overflow:hidden;
-
     }
 
     .carousel .item  img {
@@ -112,11 +111,10 @@
     }
 
     .banner-text {
-        display: inline-table;
+        display: inline-block;
         text-align: inherit;
         padding-left: 10px;
         padding-right: 10px;
-        height: inherit
     }
 
     .banner-text h2 {
