--- a/app/views/static_pages/_home_media_viewer.html.erb
+++ b/app/views/static_pages/_home_media_viewer.html.erb
@@ -120,6 +120,7 @@
     .banner-text h2 {
         color:#ffffff;
         font-size: 17px;
+        margin-bottom:4px;
     }
 
     .banner-text h4 {
