--- a/app/views/static_pages/_home_media_viewer.html.erb
+++ b/app/views/static_pages/_home_media_viewer.html.erb
@@ -68,6 +68,7 @@
         width: 100%;
         height: 320px;
         border: 0 !important;
+        padding-bottom: 20px;
     }
 
     .carousel .item {
@@ -102,14 +103,20 @@
         right: 0;
         top: auto;
         bottom: 21px;
-        text-align: right;
+        text-align: center;
+        color: black;
     }
 
     .carousel-indicators.middle li {
         float: none;
         display: inline-block;
+        background-color: #999;
+        background-color: rgba(70,70,70,.25);
     }
 
+    .carousel-indicators.middle .active {
+        background-color: #444;
+    }
     .banner-text {
         display: inline-block;
         text-align: inherit;
