--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -120,7 +120,7 @@
   <ul class='unstyled'>
     <%= render partial: "project_detail", locals: {container_tag: "li", class_name: "Description", heading: ""} %>
     <%= render partial: "project_detail", locals: {container_tag: "li", class_name: "Capacity", heading: "Capacity" } %>
-  </ul>
+    <ul>
 </div>
 
 
@@ -147,7 +147,7 @@
 
 
 <div class="row-fluid">
-    <div class="span6" style="word-wrap:break-word;">
+    <div class="span6">
       <h4>Resources:</h4>
       <% if current_user_is_aiddata %>
           <%= render 'resources_for_aiddata' %>
@@ -182,7 +182,7 @@
 </div>
 
    <div class='row-fluid'>
-     <div class='span6' style="word-wrap:break-word;">
+     <div class='span6'>
       <% if current_user_is_aiddata %>
 
         <h4>Sources:</h4>
