--- a/app/views/media_items/_media_upload_form.html.erb
+++ b/app/views/media_items/_media_upload_form.html.erb
@@ -45,6 +45,7 @@
   <!-- upload file popup box -->
   <div id="upload_file" class="modal hide fade in" style="text-align:center;">
     <h3>Upload a File</h3>
+    <div class="muted">Max File Size: 20 MB</div>
       <% if current_user %>
          <%= form_tag "#{project_path @project}/media_items", :multipart => true, onsubmit: "return confirm_terms_and_conditions(this)" do %>
             <%= file_field_tag "media" %>
