--- a/app/views/media_items/_media_upload_form.html.erb
+++ b/app/views/media_items/_media_upload_form.html.erb
@@ -14,26 +14,38 @@
 
   <!-- download file popup box -->
   <div id="download_file" class="modal hide fade in" style="text-align:center; padding:10px;">
+
       <% downloadable_media = @project.get_downloadable_media_items %>
 
       <% if !downloadable_media.empty? %>
-        <h3>Download Files:</h3>
-        <table border="1">
-          <tr>
-            <td></td>
-            <td><b>File</b></td>
-            <td><b>Size</b></td>
-            <td><b>Media Source</b></td>
-          </tr>
-          <% downloadable_media.each do |media_item| %>
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+          <h3>Download Files</h3>
+        </div>
+
+        <div class="scrolling_popup">
+          <table class="table">
+            <thead>
               <tr>
-                <td><%= image_tag Icon.for_filename(media_item.media_file_name) %></td>
-                <td><%= link_to media_item.download_text, media_item.media.url %></td>
-                <td><%= number_to_human_size(media_item.media_file_size) %></td>
-                <td><%= media_item.media_source_type.name %></td>
+                <td></td>
+                <td><b>File</b></td>
+                <td><b>Size</b></td>
+                <td><b>Media Source</b></td>
               </tr>
-          <% end %>
-        </table>
+            </thead>
+
+            <tbody>
+              <% downloadable_media.each do |media_item| %>
+                  <tr>
+                    <td><%= image_tag Icon.for_filename(media_item.media_file_name) %></td>
+                    <td><%= link_to media_item.download_text, media_item.media.url %></td>
+                    <td><%= number_to_human_size(media_item.media_file_size) %></td>
+                    <td><%= media_item.media_source_type.name %></td>
+                  </tr>
+              <% end %>
+            </tbody>
+          </table>
+        </div>
       <% else %>
           <p>
           <h4 style="text-align:center">
@@ -44,7 +56,10 @@
 
   <!-- upload file popup box -->
   <div id="upload_file" class="modal hide fade in" style="text-align:center;">
-    <h3>Upload a File</h3>
+    <div class="modal-header" style="border:0px;">
+      <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+      <h3>Upload a File</h3>
+    </div>
     <div class="muted">Max File Size: 20 MB</div>
       <% if current_user %>
          <%= form_tag "#{project_path @project}/media_items", :multipart => true, onsubmit: "return confirm_terms_and_conditions(this)" do %>
@@ -68,9 +83,12 @@
 
   <!-- share video popup box -->
   <div id="share_video" class="modal hide fade in" style="text-align:center; padding:20px;">
+    <div class="modal-header"  style="border:0px">
+      <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
       <h3>Share a Video</h3>
+    </div>
       <% if current_user %>
-          <p>Enter url here:</p>
+          <div class="muted">Enter url here:</div>
           <%= form_tag "#{project_path @project}/media_items", :multipart => true do %>
               <%= text_field_tag "url" %>
               <%= hidden_field_tag( "user_id", current_user[:id]) %>
