--- a/app/views/resources/index.html.haml
+++ b/app/views/resources/index.html.haml
@@ -22,12 +22,15 @@
                     = link_to "Title", params.merge(order: "title", dir: dir)
                 %th Authors
                 %th Publisher
+                %th
+                    = link_to "Resource type", params.merge(order: "resource_type", dir: dir)
+                %th
+                    = link_to "Language", params.merge(order: "language", dir: dir)
+                %th
+                    = link_to "# Linked Projects", params.merge(order: "projects_count", dir: dir)
                 %th 
                     = link_to "Retrieved at", params.merge(order: "fetched_at", dir: dir)
-                %th 
-                    = link_to "Resource type", params.merge(order: "resource_type", dir: dir)
-                %th 
-                    = link_to "# Linked Projects", params.merge(order: "projects_count", dir: dir)
+
         %tbody
             -  @resources.each do |resource|
                 %tr
@@ -38,11 +41,15 @@
                     %td
                         = "#{resource.publisher || '(No publisher)'}#{ resource.publisher_location.blank? ? "" : ": #{resource.publisher_location}"} (#{resource.publish_date || "No date"})"
                     %td
-                        = resource.dont_fetch ? "Not fetching." : resource.fetched_at
-                    %td
                         = resource.resource_type
                     %td
+                        - if resource.language_id?
+                            = resource.language.name
+                    %td
                         = resource.projects_count
+                    %td
+                        = resource.dont_fetch ? "Not fetching." : resource.fetched_at
+
 .row-fluid
     = will_paginate @resources
 
