--- a/app/views/resources/index.html.haml
+++ b/app/views/resources/index.html.haml
@@ -25,7 +25,7 @@
                 %th
                     = link_to "Resource type", params.merge(order: "resource_type", dir: dir)
                 %th
-                    = link_to "Language", params.merge(order: "language", dir: dir)
+                    = link_to "Language", params.merge(order: "language_id", dir: dir)
                 %th
                     = link_to "# Linked Projects", params.merge(order: "projects_count", dir: dir)
                 %th 
