working on nested validation, but is not working

--- a/app/views/projects/_project_form_recipients.html.haml
+++ b/app/views/projects/_project_form_recipients.html.haml
@@ -1,4 +1,8 @@
 #project-form-recipients.project-accessory-fields
+	- if !@project.errors[:geopoliticals].blank?
+		- @project.errors[:geopoliticals].each do |error|
+			%div{:class => "alert alert-danger"}
+				= error
 	%p
 		%strong
 			Recipients:
