--- a/app/views/static_pages/_aggregate_exporter_where_filter.html.haml
+++ b/app/views/static_pages/_aggregate_exporter_where_filter.html.haml
@@ -1,4 +1,8 @@
 -# Send it a where_filter...
 %li
 	= label_tag where_filter[:sym].to_s, where_filter[:name] , class: 'where_filter_heading'
-	= select_tag where_filter[:sym].to_s, options_for_select(where_filter[:options]), multiple: true, class: 'aggregate_input where_filter' 
+
+	- if where_filter[:name].to_s == "Flow Class"
+		= select_tag where_filter[:sym].to_s, options_for_select(where_filter[:options], Proc.new { OdaLike.where(export: true).map(&:name) }.call), multiple: true, class: 'aggregate_input where_filter'
+	- else
+		= select_tag where_filter[:sym].to_s, options_for_select(where_filter[:options]), multiple: true, class: 'aggregate_input where_filter'
