--- a/app/views/static_pages/_vital_stats.html.haml
+++ b/app/views/static_pages/_vital_stats.html.haml
@@ -20,8 +20,19 @@
     %span
       Chinese
     %strong><
+      %a{href: "/projects?utf8=%E2%9C%93&search=&active_string%5B%5D=Active&year%5B%5D=2000&year%5B%5D=2001&year%5B%5D=2002&year%5B%5D=2003&year%5B%5D=2004&year%5B%5D=2005&year%5B%5D=2006&year%5B%5D=2007&year%5B%5D=2008&year%5B%5D=2009&year%5B%5D=2010&year%5B%5D=2011&year%5B%5D=2012&oda_like_name%5B%5D=ODA-like&oda_like_name%5B%5D=OOF-like&oda_like_name%5B%5D=Official+Investment&oda_like_name%5B%5D=Vague+%28Official+Finance%29&status_name%5B%5D=Completion&status_name%5B%5D=Implementation&status_name%5B%5D=Pipeline%3A+Commitment&status_name%5B%5D=Pipeline%3A+Pledge&verified_name%5B%5D=Checked"}><
+        official finance projects, including pledges
+    %span<>
+      , <%= official.min_year %>-<%= official.max_year %>:
+    %span.official#count.text-success
+      <%= official_pledge.count %>
+
+  %li
+    %span
+      Chinese
+    %strong><
       %a{href: "/projects/official"}><
-        official finance projects
+        official finance projects, excluding pledges
     %span<>
       , <%= official.min_year %>-<%= official.max_year %>:
     %span.official#count.text-success
@@ -29,30 +40,29 @@
   %li
     Amounting to
     %strong
-      %a{href: "/projects?scope_names[]=Official Finance"}<>
+      %a{href: "/projects/official"}<>
         financial commitments
     of:
     %span.official#usd_2009.text-success
       $<%= nice_money(official.usd_2009) %>
-    -# %small
-      -# (USD-2009)
+
+
   %li
     %span
       Value of
     %strong<>
-      %a{href: "/projects?active_string=Active&oda_like_name=ODA-like&status_name[]=Implementation&status_name[]=Pipeline%3A+Commitment&status_name[]=Pipeline%3A+Vague"}<>
+      %a{href: "/projects?utf8=%E2%9C%93&search=&active_string%5B%5D=Active&year%5B%5D=2000&year%5B%5D=2001&year%5B%5D=2002&year%5B%5D=2003&year%5B%5D=2004&year%5B%5D=2005&year%5B%5D=2006&year%5B%5D=2007&year%5B%5D=2008&year%5B%5D=2009&year%5B%5D=2010&year%5B%5D=2011&year%5B%5D=2012&oda_like_name%5B%5D=ODA-like&status_name%5B%5D=Completion&status_name%5B%5D=Implementation&status_name%5B%5D=Pipeline%3A+Commitment&verified_name%5B%5D=Checked"}<>
         ODA-Like commitments
     %span<>
       , <%= official.min_year %>-<%= official.max_year %>:
     %span.oda_like#usd_2009.text-success
       $<%= nice_money(oda_like.usd_2009) %>
-    -# %small
-      -# (USD-2009)
+
   %li
     %span
       Projects
     %strong<>
-      %a{href: "/projects?active_string=Active&status_name[]=Completion&status_name[]=Implementation"}<>
+      %a{href: "/projects?utf8=%E2%9C%93&search=&active_string%5B%5D=Active&year%5B%5D=2000&year%5B%5D=2001&year%5B%5D=2002&year%5B%5D=2003&year%5B%5D=2004&year%5B%5D=2005&year%5B%5D=2006&year%5B%5D=2007&year%5B%5D=2008&year%5B%5D=2009&year%5B%5D=2010&year%5B%5D=2011&year%5B%5D=2012&oda_like_name%5B%5D=ODA-like&oda_like_name%5B%5D=OOF-like&oda_like_name%5B%5D=Vague+%28Official+Finance%29&status_name%5B%5D=Completion&status_name%5B%5D=Implementation&verified_name%5B%5D=Checked"}<>
         implemented or completed
     %span><
       , <%= official.min_year %>-<%= official.max_year %>:
@@ -61,13 +71,11 @@
   %li
     Value of
     %strong
-      %a{href: "/projects?active_string=Active&status_name[]=Completion&status_name[]=Implementation"}<
+      %a{href: "/projects?utf8=%E2%9C%93&search=&active_string%5B%5D=Active&year%5B%5D=2000&year%5B%5D=2001&year%5B%5D=2002&year%5B%5D=2003&year%5B%5D=2004&year%5B%5D=2005&year%5B%5D=2006&year%5B%5D=2007&year%5B%5D=2008&year%5B%5D=2009&year%5B%5D=2010&year%5B%5D=2011&year%5B%5D=2012&oda_like_name%5B%5D=ODA-like&oda_like_name%5B%5D=OOF-like&oda_like_name%5B%5D=Vague+%28Official+Finance%29&status_name%5B%5D=Completion&status_name%5B%5D=Implementation&verified_name%5B%5D=Checked"}<
         implemented/completed
     projects:
     %span.implemented_or_completed#usd_2009.text-success<
       $<%= nice_money(implemented_or_completed.usd_2009) %>
-    -# %small
-      -# (USD-2009)
 
 
 :coffeescript
@@ -79,7 +87,7 @@
         verified: "Checked"
         flow_class: [
           "ODA-like"
-          # "Official Investment"
+          "Official Investment"
           "OOF-like"
           "Vague (Official Finance)"
           ].join("*")
@@ -88,9 +96,30 @@
           "Completion"
           "Implementation"
           "Pipeline: Commitment"
-          "Pipeline/identification"
-          # "Pipeline: Pledge"
-          "Pipeline: Vague"
+          #"Pipeline/identification"
+          #"Pipeline: Pledge"
+          #"Pipeline: Vague"
+        ].join("*")
+
+    official_pledge:
+      params:
+        get: "donor"
+        # only ACTIVE by default
+        verified: "Checked"
+        flow_class: [
+          "ODA-like"
+          "Official Investment"
+          "OOF-like"
+          "Vague (Official Finance)"
+          ].join("*")
+        status: [
+          # Everything but suspended and cancelled
+          "Completion"
+          "Implementation"
+          "Pipeline: Commitment"
+          #"Pipeline/identification"
+          "Pipeline: Pledge"
+          #"Pipeline: Vague"
         ].join("*")
 
     oda_like:
@@ -108,9 +137,8 @@
           "Pipeline: Commitment"
           # "Pipeline/identification"
           # "Pipeline: Pledge"
-          "Pipeline: Vague"
+          #"Pipeline: Vague"
         ].join("*")
-
 
     implemented_or_completed:
       params:
@@ -119,7 +147,7 @@
         verified: "Checked"
         flow_class: [
           "ODA-like"
-          "Official investment"
+          #"Official investment"
           "OOF-like"
           "Vague (Official Finance)"
           ].join("*")
@@ -145,6 +173,12 @@
 
     returned_queries += 1
     fill_template_if_finished(vitals, returned_queries)
+
+  $.get '/aggregates/projects', vitals.official_pledge.params, (data) ->
+      this_set = vitals.official_pledge
+
+      data = (d for d in data when d["donor"] is "CHN")[0]
+      this_set.count = data["count"]
 
   $.get '/aggregates/projects', vitals.oda_like.params, (data) ->
     this_set = vitals.oda_like
