trying to fix issue with count not always showing up in production

--- a/app/views/static_pages/_vital_stats.html.haml
+++ b/app/views/static_pages/_vital_stats.html.haml
@@ -24,7 +24,7 @@
         official finance projects, including pledges
     %span<>
       , <%= official.min_year %>-<%= official.max_year %>:
-    %span.official#count.text-success
+    %span.official_pledge#count.text-success
       <%= official_pledge.count %>
 
   %li
