--- a/app/views/static_pages/_home_media_viewer.html.erb
+++ b/app/views/static_pages/_home_media_viewer.html.erb
@@ -150,7 +150,7 @@
               <% if !media_item.url.blank? %>
                   <%= raw(media_item.youtube_embed(media_item.url,320,570,iframe_id)) %>
               <% else %>
-                  <%= image_tag media_item.media.url %>
+                  <%= image_tag(media_item.media.url(:home_size)) %>
               <% end %>
               <div class="carousel-caption youtube-caption" id=<%= iframe_id %> >
                 <p>
@@ -170,7 +170,7 @@
           <% if !home_media_item.url.blank? %>
               <%= raw(home_media_item.youtube_embed(home_media_item.url,320,570,iframe_id)) %>
           <% else %>
-              <%= image_tag(home_media_item.home_media.url(:medium)) %>
+              <%= image_tag(home_media_item.home_media.url(:home_size)) %>
           <% end %>
           <div class="carousel-caption youtube-caption" id=<%= iframe_id %>>
             <p>
