added new publications page

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -90,7 +90,7 @@
                   %li 
                     = link_to "Geocoded Data", content_by_name_path("geocoding")
               %li
-                = link_to "Publications", content_by_name_path("publications")
+                = link_to "Publications", complex_content_by_name_path("publications")
               %li.dropdown
                 %a.dropdown-toggle{href: "#", "data-toggle" => "dropdown"}
                   Media
