added new media page

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -97,7 +97,7 @@
                   %i.caret
                 %ul.dropdown-menu
                   %li
-                    = link_to "In the news", content_by_name_path("media")
+                    = link_to "In the news", complex_content_by_name_path("media")
                   %li
                     = link_to "Multimedia", content_by_name_path("multimedia")
               
