--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -39,7 +39,8 @@
                   %li 
                     = link_to "About the project", content_by_name_path("about_the_project")
                   %li 
-                    = link_to "Meet the team", complex_content_by_name_path("meet_the_team")
+                    //= link_to "Meet the team", complex_content_by_name_path("meet_the_team")
+                    = link_to "Meet the team", content_by_name_path("meet_the_team")
 
                   %li
                     = link_to "Contact", content_by_name_path("contact")
@@ -90,14 +91,16 @@
                   %li 
                     = link_to "Geocoded Data", content_by_name_path("geocoding")
               %li
-                = link_to "Publications", complex_content_by_name_path("publications")
+                //= link_to "Publications", complex_content_by_name_path("publications")
+                = link_to "Publications", content_by_name_path("publications")
               %li.dropdown
                 %a.dropdown-toggle{href: "#", "data-toggle" => "dropdown"}
                   Media
                   %i.caret
                 %ul.dropdown-menu
                   %li
-                    = link_to "In the news", complex_content_by_name_path("media")
+                    //= link_to "In the news", complex_content_by_name_path("media")
+                    = link_to "In the news", content_by_name_path("media")
                   %li
                     = link_to "Multimedia", content_by_name_path("multimedia")
               
