moved downloads to static pages controller

--- a/app/views/static_pages/downloads.html.erb
+++ b/app/views/static_pages/downloads.html.erb
@@ -1,3 +1,10 @@
+<% provide :title, "Downloads" %>
+
+
+<h1 class='page-header'>
+  Downloads
+
+</h1>
 <h1>Project-Level Data</h1>
 
 <p class='lead'>
