minor naming changes

--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -56,7 +56,7 @@
         <%= render partial: 'project_detail', locals: {container_tag: "li", class_name: "IsCommercial", heading: "Commercial"} %>     
         <%= render partial: 'project_detail', locals: {container_tag: "li", class_name: "LineOfCredit", heading: "Line of Credit"} %>     
         <%= render partial: 'project_detail', locals: {container_tag: "li", class_name: "IsCofinanced", heading: "Is Cofinanced"} %>
-        <%= render partial: 'project_detail', locals: {container_tag: "li", class_name: "IsGroundTruthed", heading: "Ground Truthed"} %>
+        <%= render partial: 'project_detail', locals: {container_tag: "li", class_name: "IsGroundTruthing", heading: "Ground Truthed"} %>
       </ul>
 
     </div>
