made description and teaser html safe

--- a/app/views/media/_media_row.html.erb
+++ b/app/views/media/_media_row.html.erb
@@ -18,7 +18,7 @@
             </small>
           </h4>
           <p>
-            <%= a.teaser %>
+            <%= a.teaser.html_safe %>
           </p>
           <p>
             <%= link_to("Read more...", a.url) %>
