--- a/app/views/publications/_publications.html.erb
+++ b/app/views/publications/_publications.html.erb
@@ -83,8 +83,8 @@
   <tr>
     <th>Name</th>
     <th>Description</th>
-    <th>Regional Scope</th>
     <th>Author</th>
+    <th>Publisher</th>
     <th>Category</th>
   </tr>
   </thead>
@@ -93,8 +93,8 @@
       <tr>
         <td><%= link_to(publication.name, publication.url) %></td>
         <td><%= publication.description.html_safe %></td>
-        <td><%= publication.location %></td>
         <td><%= publication.author %></td>
+        <td><%= publication.publisher %></td>
         <td><%= publication.category %></td>
       </tr>
   <% end %>
