added page_order to people for ordering fac/staff members

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -58,7 +58,7 @@
                     = link_to "Suggest a Project", suggest_a_project_path
 
                   %li 
-                    = link_to "Download Files", content_by_name_path("downloads")
+                    = link_to "Download Files", downloads_path
                   %li
                     = link_to "Aggregate Exporter", aggregate_export_path
 
