--- a/app/views/meet_the_team/_meet_the_team.html.erb
+++ b/app/views/meet_the_team/_meet_the_team.html.erb
@@ -1,5 +1,5 @@
 <h2>Faculty Staff</h2>
-<% Person.joins(:position).where(positions: {name: "Faculty/Staff"}, current_team_member: true).order("id asc").each_slice(2).each do |slice| %>
+<% Person.joins(:position).where(positions: {name: "Faculty/Staff"}, current_team_member: true).order("page_order asc").each_slice(2).each do |slice| %>
   <div class='row-fluid' style='margin:10;'>
     <% slice.each do |person| %>
           <div class='span2' >
