--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -39,8 +39,7 @@
                   %li 
                     = link_to "About the project", content_by_name_path("about_the_project")
                   %li 
-                    //= link_to "Meet the team", complex_content_by_name_path("meet_the_team")
-                    = link_to "Meet the team", content_by_name_path("meet_the_team")
+                    = link_to "Meet the team", meet_the_team_path
 
                   %li
                     = link_to "Contact", content_by_name_path("contact")
