--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -125,13 +125,13 @@
 </div>
 
 
-  <style>
+    <style>
       .scrolling_popup {
           height: 400px !important;
           overflow-y: scroll;
           overflow-wrap: break-word;
-      }​
-  </style>
+      }
+    </style>
 
   <!--  scrollable popup for resources -->
   <div id="resources" class="modal hide fade in" style="width:700px; padding:10px;">
@@ -149,8 +149,22 @@
     </div>
   </div>
 
+<!--  scrollable popup for resources -->
+<div id="geocodes" class="modal hide fade in" style="width:700px; padding:10px;">
+  <div class="modal-header" style="border:0px;">
+    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+    <h3>Geocodes:</h3>
+  </div>
+  <div class='row-fluid'>
+    <div class="scrolling_popup">
+      <%= render :partial => 'project_geocodes', :locals => { :limit => false } %>
+    </div>
+  </div>
+</div>
+
 
 <div class="row-fluid">
+
     <div class="span6" style="word-wrap: break-word;">
       <h4>Resources:</h4>
       <% if current_user_is_aiddata %>
@@ -162,15 +176,24 @@
       </div>
     </div>
 
-  <div class="span6">
-    <h4>Participating Organizations:</h4>
-    <%= render 'project_participating_organizations' %>
-  </div>
+    <div class="span6">
+    <h4> Geocodes:</h4>
+    <%= render :partial => 'project_geocodes', :locals => { :limit => true } %>
+    <div style="text-align:center">
+        <%= link_to  "<h5>View All Geocodes</h5>".html_safe, '#geocodes', { 'data-toggle' => 'modal', 'data-target' => "#geocodes"}%>
+    </div>
 
-  <div class="span6">
+    </div>
+
+    <div class="span6">
+    <h4>Participating Organizations:</h4>
+        <%= render 'project_participating_organizations' %>
+    </div>
+
+    <div class="span6">
     <h4> Contacts:</h4>
-      <%= render 'project_contacts' %>
-  </div>
+        <%= render 'project_contacts' %>
+    </div>
 
 </div>
 
